Colaboratory를 통해 생성됨

--- a/My1st_Code.ipynb
+++ b/My1st_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlH7lsp/Ldygqx8t/Gs0GE",
+      "authorship_tag": "ABX9TyM5Xpr17FFLJEbD3iVLsxqL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,79 @@
     {
       "cell_type": "markdown",
       "source": [
-        "나의 생에  첫 코드작성"
+        "1 너의 생에 첫 코드작성 (Hello World)\n"
       ],
       "metadata": {
-        "id": "x6n2WgSLhE-J"
+        "id": "UY5aadtbhUkD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VyiT-ijxhPtw",
+        "outputId": "45f7c5b4-4cd9-4028-c7cd-9b8fd41b1ea5"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello world\n"
+          ]
+        }
+      ],
+      "source": [
+        "print (\"Hello world\") #기본적인 코드를 입력해 출력"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. 사칙연산 (+,-,*,/)\n"
+      ],
+      "metadata": {
+        "id": "9A2oswCckB56"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (4+4,4-2,4*4,4/2) #괄호안에 숫자를 넣어 계산"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yp8X733dkycC",
+        "outputId": "368dd9e3-9103-4867-ba7b-410f1efdea42"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8 2 16 2.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "TaMX25WvlMO6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "apcRL5iRkxCK"
       }
     }
   ]
