Colaboratory를 통해 생성됨

--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDwT9hfA0Sjf5eCriiHXUW",
+      "authorship_tag": "ABX9TyNAJQZYjhCi+rppu21HHdYs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "movie_list = ('아바타' , '스타워즈' , ' 반지의 제왕')"
+        "movie_list = ('아바타' , '스타워즈' , ' 반지의 제왕') #코드로 영화리스트 나열"
       ]
     },
     {
@@ -51,7 +51,7 @@
     {
       "cell_type": "code",
       "source": [
-        "day_list = [ '월(mon)', '화(thus)']\n",
+        "day_list = [ '월(mon)', '화(thus)'] #코드를 이용해 요일 배열\n",
         "print"
       ],
       "metadata": {
